updated the check box clicked drop

--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
                 aria-labelledby="rollOut"
                 role="checkbox"
             >
-                <div class="first-setup" tabindex="0" role="checkbox">
+                <div class="first-setup" tabindex="0" role="checkbox" >
                     <div class="firstCus-box options">
                         <div class="checkboxContainer" onclick="toggleCount('score1')">
                             <button class="checkbox1">
@@ -140,7 +140,7 @@
                         </div>
                         <h2>Customize you online store</h2>
                     </div>
-                    <div class="setupInfo-box">
+                    <div class="setupInfo-box" id="setupInfo-one">
                         <div class="setupInfo-innerbox">
                             <p>Choose a theme and add your logo, colors and images to reflect your brand.</p>
                             <a href="#">Learn more</a>
@@ -165,7 +165,7 @@
                         </div>
                         <h2>Add your first product</h2>
                     </div>
-                    <div class="setupInfo-box">
+                    <div class="setupInfo-box" id="setupInfo-two">
                         <div class="setupInfo-innerbox">
                             <p>Write a description, add photos, and set pricing for the products you plan to sell</p>
                             <a href="#">Learn more</a>
@@ -179,7 +179,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="first-setup" tabindex="0" role="checkbox">
+                <div class="first-setup" tabindex="0" role="checkbox" >
                     <div class="firstCus-box options">
                         <div class="checkboxContainer" onclick="toggleCount('score3')" >
                             <button class="checkbox1">
@@ -193,7 +193,7 @@
                         </div>
                         <h2>Add a custom domain</h2>
                     </div>
-                    <div class="setupInfo-box">
+                    <div class="setupInfo-box" id="setupInfo-three">
                         <div class="setupInfo-innerbox">
                             <p>Your current domain is 222219.myshopify.com but you can add a custom domain to help customer find you online store</p>
                             <a href="#">Learn more</a>
@@ -204,7 +204,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="first-setup" tabindex="0" role="checkbox">
+                <div class="first-setup" tabindex="0" role="checkbox" >
                     <div class="firstCus-box options">
                         <div class="checkboxContainer" onclick="toggleCount('score4')" >
                             <button class="checkbox1">
@@ -218,7 +218,7 @@
                         </div>
                         <h2>Name your store</h2>
                     </div>
-                    <div class="setupInfo-box">
+                    <div class="setupInfo-box" id="setupInfo-four">
                         <div class="setupInfo-innerbox">
                             <p>Your temporary store name is currently Davii collections. The store name appears in your admin and your online store</p>
                             <a href="#">Learn more</a>
@@ -229,7 +229,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="first-setup" tabindex="0" role="checkbox">
+                <div class="first-setup" tabindex="0" role="checkbox" >
                     <div class="firstCus-box options">
                         <div class="checkboxContainer" onclick="toggleCount('score5')" >
                             <button class="checkbox1">
@@ -243,7 +243,7 @@
                         </div>
                         <h2>Set up your payment provider</h2>
                     </div>
-                    <div class="setupInfo-box">
+                    <div class="setupInfo-box" id="setupInfo-five">
                         <div class="setupInfo-innerbox">
                             <p>Choose a payment provider to start accepting payments. You will need to create an account with the payment provider and set it up with your shopify store.</p>
                             <a href="#">Learn more</a>
